yew-macro/tests/macro/classes-fail.stderr
error: expected `,`
 --> $DIR/classes-fail.rs:7:20
  |
7 |     classes!("one" "two");
  |                    ^^^^^

error[E0277]: the trait bound `yew::virtual_dom::Classes: std::convert::From<{integer}>` is not satisfied
 --> $DIR/classes-fail.rs:4:5
  |
4 |     classes!(42);
  |     ^^^^^^^^^^^^^ the trait `std::convert::From<{integer}>` is not implemented for `yew::virtual_dom::Classes`
  |
  = help: the following implementations were found:
            <yew::virtual_dom::Classes as std::convert::From<&'static str>>
            <yew::virtual_dom::Classes as std::convert::From<&[T]>>
            <yew::virtual_dom::Classes as std::convert::From<&std::option::Option<T>>>
            <yew::virtual_dom::Classes as std::convert::From<&std::string::String>>
          and 4 others
  = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::Classes>` for `{integer}`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::Classes: std::convert::From<{float}>` is not satisfied
 --> $DIR/classes-fail.rs:5:5
  |
5 |     classes!(42.0);
  |     ^^^^^^^^^^^^^^^ the trait `std::convert::From<{float}>` is not implemented for `yew::virtual_dom::Classes`
  |
  = help: the following implementations were found:
            <yew::virtual_dom::Classes as std::convert::From<&'static str>>
            <yew::virtual_dom::Classes as std::convert::From<&[T]>>
            <yew::virtual_dom::Classes as std::convert::From<&std::option::Option<T>>>
            <yew::virtual_dom::Classes as std::convert::From<&std::string::String>>
          and 4 others
  = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::Classes>` for `{float}`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::Classes: std::convert::From<{integer}>` is not satisfied
 --> $DIR/classes-fail.rs:9:5
  |
9 |     classes!(vec![42]);
  |     ^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<{integer}>` is not implemented for `yew::virtual_dom::Classes`
  |
  = help: the following implementations were found:
            <yew::virtual_dom::Classes as std::convert::From<&'static str>>
            <yew::virtual_dom::Classes as std::convert::From<&[T]>>
            <yew::virtual_dom::Classes as std::convert::From<&std::option::Option<T>>>
            <yew::virtual_dom::Classes as std::convert::From<&std::string::String>>
          and 4 others
  = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::Classes>` for `{integer}`
  = note: required because of the requirements on the impl of `std::convert::From<std::vec::Vec<{integer}>>` for `yew::virtual_dom::Classes`
  = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::Classes>` for `std::vec::Vec<{integer}>`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::Classes: std::convert::From<{integer}>` is not satisfied
  --> $DIR/classes-fail.rs:13:5
   |
13 |     classes!(some);
   |     ^^^^^^^^^^^^^^^ the trait `std::convert::From<{integer}>` is not implemented for `yew::virtual_dom::Classes`
   |
   = help: the following implementations were found:
             <yew::virtual_dom::Classes as std::convert::From<&'static str>>
             <yew::virtual_dom::Classes as std::convert::From<&[T]>>
             <yew::virtual_dom::Classes as std::convert::From<&std::option::Option<T>>>
             <yew::virtual_dom::Classes as std::convert::From<&std::string::String>>
           and 4 others
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::Classes>` for `{integer}`
   = note: required because of the requirements on the impl of `std::convert::From<std::option::Option<{integer}>>` for `yew::virtual_dom::Classes`
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::Classes>` for `std::option::Option<{integer}>`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::Classes: std::convert::From<u32>` is not satisfied
  --> $DIR/classes-fail.rs:14:5
   |
14 |     classes!(none);
   |     ^^^^^^^^^^^^^^^ the trait `std::convert::From<u32>` is not implemented for `yew::virtual_dom::Classes`
   |
   = help: the following implementations were found:
             <yew::virtual_dom::Classes as std::convert::From<&'static str>>
             <yew::virtual_dom::Classes as std::convert::From<&[T]>>
             <yew::virtual_dom::Classes as std::convert::From<&std::option::Option<T>>>
             <yew::virtual_dom::Classes as std::convert::From<&std::string::String>>
           and 4 others
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::Classes>` for `u32`
   = note: required because of the requirements on the impl of `std::convert::From<std::option::Option<u32>>` for `yew::virtual_dom::Classes`
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::Classes>` for `std::option::Option<u32>`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::Classes: std::convert::From<{integer}>` is not satisfied
  --> $DIR/classes-fail.rs:16:5
   |
16 |     classes!("one", 42);
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<{integer}>` is not implemented for `yew::virtual_dom::Classes`
   |
   = help: the following implementations were found:
             <yew::virtual_dom::Classes as std::convert::From<&'static str>>
             <yew::virtual_dom::Classes as std::convert::From<&[T]>>
             <yew::virtual_dom::Classes as std::convert::From<&std::option::Option<T>>>
             <yew::virtual_dom::Classes as std::convert::From<&std::string::String>>
           and 4 others
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::Classes>` for `{integer}`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
